✨ feat: 开始首页设计

--- a/web/src/assets/styles/default.scss
+++ b/web/src/assets/styles/default.scss
@@ -20,3 +20,6 @@ $--colors: (
 
 // You can comment it to hide debug info.
 // @debug $--colors;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
