--- a/web/src/assets/styles/default.scss
+++ b/web/src/assets/styles/default.scss
@@ -1,10 +1,10 @@
 $--colors: (
-        "primary": ("base": green,),
-        "success": ("base": #21ba45,),
-        "warning": ("base": #f2711c,),
+        "primary": ("base": #409eff,),
+        "success": ("base": #67c23a,),
+        "warning": ("base": #e6a23c,),
         "danger": ("base": #db2828,),
-        "error": ("base": #db2828,),
-        "info": ("base": #42b8dd,),
+        "error": ("base": #f56c6c,),
+        "info": ("base": #909399,),
 );
 
 // You should use them in scss, because we calculate it by sass.
