--- a/web/src/assets/styles/default.scss
+++ b/web/src/assets/styles/default.scss
@@ -20,3 +20,4 @@ $--colors: (
 
 // You can comment it to hide debug info.
 // @debug $--colors;
+@use "element-plus/theme-chalk/src/dark/css-vars.scss" as *;
