--- a/adm/src/assets/styles/base.css
+++ b/adm/src/assets/styles/base.css
@@ -36,6 +36,36 @@
     --section-gap: 160px;
 }
 
+:root {
+    /* left menu start */
+    /*--left-menu-max-width: 200px;*/
+    /*--left-menu-min-width: 64px;*/
+    /*--left-menu-bg-color: #001529;*/
+    /*--left-menu-bg-light-color: #0f2438;*/
+    /*--left-menu-bg-active-color: var(--el-color-primary);*/
+    /*--left-menu-text-color: #bfcbd9;*/
+    /*--left-menu-text-active-color: #fff;*/
+    /*--left-menu-collapse-bg-active-color: var(--el-color-primary);*/
+    /* left menu end */
+
+    --el-menu-bg-color: #001529;
+
+    --el-menu-active-color: var(--el-color-primary);
+    --el-menu-text-color: var(--el-text-color-primary);
+    --el-menu-hover-text-color: var(--el-color-primary);
+    --el-menu-hover-bg-color: var(--el-color-primary-light-9);
+    --el-menu-item-height: 56px;
+    --el-menu-sub-item-height: calc(var(--el-menu-item-height) - 6px);
+    --el-menu-horizontal-height: 60px;
+    --el-menu-horizontal-sub-item-height: 36px;
+    --el-menu-item-font-size: var(--el-font-size-base);
+    --el-menu-item-hover-fill: var(--el-color-primary-light-9);
+    --el-menu-border-color: var(--el-border-color);
+    --el-menu-base-level-padding: 20px;
+    --el-menu-level-padding: 20px;
+    --el-menu-icon-width: 24px;
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
         --color-background: var(--vt-c-black);
