--- a/adm/src/assets/styles/base.css
+++ b/adm/src/assets/styles/base.css
@@ -38,14 +38,14 @@
 
 :root {
     /* left menu start */
-    /*--left-menu-max-width: 200px;*/
-    /*--left-menu-min-width: 64px;*/
-    /*--left-menu-bg-color: #001529;*/
-    /*--left-menu-bg-light-color: #0f2438;*/
-    /*--left-menu-bg-active-color: var(--el-color-primary);*/
-    /*--left-menu-text-color: #bfcbd9;*/
-    /*--left-menu-text-active-color: #fff;*/
-    /*--left-menu-collapse-bg-active-color: var(--el-color-primary);*/
+    --left-menu-max-width: 200px;
+    --left-menu-min-width: 64px;
+    --left-menu-bg-color: #001529;
+    --left-menu-bg-light-color: #0f2438;
+    --left-menu-bg-active-color: var(--el-color-primary);
+    --left-menu-text-color: #bfcbd9;
+    --left-menu-text-active-color: #fff;
+    --left-menu-collapse-bg-active-color: var(--el-color-primary);
     /* left menu end */
 
     --el-menu-bg-color: #001529;
