--- a/adm/src/assets/styles/element/index.scss
+++ b/adm/src/assets/styles/element/index.scss
@@ -1,3 +1,5 @@
+$item-height: 56px;
+
 @forward "element-plus/theme-chalk/src/common/var" with  (
     $colors: (
         "primary": ("base": #409eff,),
@@ -8,12 +10,15 @@
         "info": ("base": #909399,),
     ),
     $header:(
-      'height': 48px,
+      'height': $item-height,
     ),
     $footer:(
-      'height': 48px,
+      'height': $item-height,
+    ),
+    $fill-color:(
+      'blank':transparent,
     ),
     $button-padding-horizontal: ("default": 50px)
 );
 
-@use "element-plus/theme-chalk/src/dark/css-vars" as *;
+//@use "element-plus/theme-chalk/src/dark/css-vars" as *;
