--- a/adm/src/assets/styles/element.scss
+++ b/adm/src/assets/styles/element.scss
@@ -1,22 +1,34 @@
-@forward "element-plus/theme-chalk/src/common/var" with  (
-    $colors: (
-        "primary": ("base": #409eff,),
-        "success": ("base": #67c23a,),
-        "warning": ("base": #e6a23c,),
-        "danger": ("base": #db2828,),
-        "error": ("base": #f56c6c,),
-        "info": ("base": #909399,),
+@forward 'element-plus/theme-chalk/src/common/var' with (
+  $colors: (
+    'primary': (
+      'base': #409eff
     ),
-    $header:(
-      'height': $item-height,
-      'padding': 0,
+    'success': (
+      'base': #67c23a
     ),
-    $footer:(
-      'height': $item-height,
+    'warning': (
+      'base': #e6a23c
     ),
-    $fill-color:(
-      'blank':transparent,
+    'danger': (
+      'base': #db2828
     ),
+    'error': (
+      'base': #f56c6c
+    ),
+    'info': (
+      'base': #909399
+    )
+  ),
+  $header: (
+    'height': $item-height,
+    'padding': 0
+  ),
+  $footer: (
+    'height': $item-height
+  ),
+  $fill-color: (
+    'blank': transparent
+  )
 );
 
 //@use "element-plus/theme-chalk/src/dark/css-vars" as *;
