--- a/adm/src/assets/styles/variables.scss
+++ b/adm/src/assets/styles/variables.scss
@@ -42,8 +42,8 @@ $item-height: 56px;
   /* left menu start */
   --left-menu-max-width: 200px;
   --left-menu-min-width: 64px;
-  --left-menu-bg-color: #001529;
-  --left-menu-bg-light-color: #0f2438;
+  --left-menu-bg-color: #304156;
+  --left-menu-bg-light-color: #1F2D3D;
   --left-menu-bg-active-color: var(--el-color-primary);
   --left-menu-text-color: #bfcbd9;
   --left-menu-text-active-color: #fff;
