--- a/adm/src/assets/styles/variables.scss
+++ b/adm/src/assets/styles/variables.scss
@@ -43,7 +43,7 @@ $item-height: 56px;
   --left-menu-max-width: 200px;
   --left-menu-min-width: 64px;
   --left-menu-bg-color: #304156;
-  --left-menu-bg-light-color: #1F2D3D;
+  --left-menu-bg-light-color: #1f2d3d;
   --left-menu-bg-active-color: var(--el-color-primary);
   --left-menu-text-color: #bfcbd9;
   --left-menu-text-active-color: #fff;
