🦄 refactor: 调整组件的命名和存放路径

--- a/adm/src/assets/styles/element.scss
+++ b/adm/src/assets/styles/element.scss
@@ -24,7 +24,8 @@
     'padding': 0
   ),
   $footer: (
-    'height': $item-height
+    'height': $item-height,
+    'padding': 0
   ),
   $fill-color: (
     'blank': transparent
